--- a/views/layouts/landingPage.ejs
+++ b/views/layouts/landingPage.ejs
@@ -15,7 +15,7 @@
 <nav>
   <ul class="nav_bar">
     <li class="nav_right">
-      <a href="/">Brand</a>
+      <a href="/">Famaff</a>
     </li>
     <li class="nav_bar_left">
       <a href="/about">About</a>
@@ -34,11 +34,20 @@
     </li>
   </ul>
 </nav>
+<section class="sec-1">
+  <div class="skils">
+    <ul class="ul-list">
+      <li class="list-skils">Node.js</li>
+      <li class="list-skils">Express.js</li>
+      <li class="list-skils">Mongodb</li>
+    </ul>
+  </div>
+</section>
 
 
 
 
-<div class="blog-card spring-fever">
+<!-- <div class="blog-card spring-fever">
   <div class="title-content">
     <h3>
       <a href="#">10 inspiring photos</a>
@@ -75,8 +84,28 @@
   </div>
   <div class="gradient-overlay"></div>
   <div class="color-overlay"></div>
-</div>
+</div> -->
 <!-- /.blog-card -->
+
+<div class="container">
+  <div class="post-img">
+    <h1>img here</h1>
+  </div>
+  <div class="title">
+    <ul>
+      <% allTitle.forEach(function(posts){ %>
+        <li class="list-title">
+          <a class="link" href="/blog/<%= posts._id %>">
+            <%= posts.title %>
+          </a>
+        </li>
+
+        <% }) %>
+    </ul>
+  </div>
+</div>
+
+
 
 
 <body>
