--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -1,21 +1,39 @@
-<form action="/blog" method="post">
-  <div class="form-group">
+<!DOCTYPE html>
+<html lang="en">
 
-    <input type="text" name="title" placeholder="title">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="error">
+    <%=  messages.error %>
   </div>
-  <div class="form-group">
+  <form action="/blog" method="post">
+    <div class="form-group">
 
-    <input type="text" name="description" placeholder="description">
-  </div>
-  <div class="form-group">
+      <input type="text" name="title" placeholder="title">
+    </div>
+    <div class="form-group">
 
-    <input type="text" name="content" placeholder="content">
-  </div>
+      <input type="text" name="description" placeholder="description">
+    </div>
+    <div class="form-group">
 
-  <div class="form-group">
-    <button class="btn btn-lg btn-primary btn-block"> Zatwierdź</button>
-  </div>
+      <input type="text" name="content" placeholder="content">
+    </div>
+
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block"> Zatwierdź</button>
+    </div>
 
 
-</form>
-<a href="/blog">back...</a>
+  </form>
+  <a href="/blog">back...</a>
+</body>
+
+</html>
