--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -1,39 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<% include  ../partials/header %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <title>Document</title>
-</head>
 
-<body>
-  <div class="error">
-    <%=  messages.error %>
-  </div>
-  <form action="/blog" method="post">
+<div class="container">
+  <form action="/blog" method="post" enctype="multipart/form-data">
+
     <div class="form-group">
-
       <input type="text" name="title" placeholder="title">
     </div>
-    <div class="form-group">
 
+    <div class="form-group">
       <input type="text" name="description" placeholder="description">
     </div>
+
     <div class="form-group">
 
-      <input type="text" name="content" placeholder="content">
+      <input class="form-control" type="file" name="images" multiple="multiple" required>
     </div>
 
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block"> Zatwierdź</button>
     </div>
-
-
   </form>
-  <a href="/blog">back...</a>
-</body>
+</div>
 
-</html>
+<a href="/blog">back...</a>
+
+
+<% include  ../partials/footer %>
