--- a/views/blog/show.ejs
+++ b/views/blog/show.ejs
@@ -2,34 +2,51 @@
 
 <h1>showe page</h1>
 
-
-
 <div class="container text-center" id="carousel">
   <% for(var i = 0; i < post.images.length; i++ ) { %>
-  <img class="img-thumbnail" src=" <%= post.images[i] %>">
-  <% } %>
+  <img class="img-thumbnail" src=" <%= post.images[i] %>" /> <% } %>
 </div>
-
-
-
+<div id="map">map</div>
 <div class="container">
   <% post.comments.forEach(function(comment){ %>
   <div class="media">
     <div class="media-body">
-      <h5 class="mt-0">
-        <%= comment.author %>
-      </h5>
+      <h5 class="mt-0"><%= comment.author.username %></h5>
       <%= comment.text %>
     </div>
   </div>
   <% }) %>
 </div>
 
+<h1><a href="/blog/<%= post._id%>/comments/new">dodaj komętarz...</a></h1>
 
-<h1>
-  <a href="/blog/<%= post._id%>/comments/new">dodaj komętarz...</a>
-</h1>
+<script>
+  var post = [<%- JSON.stringify(post) %>];
+  console.log(post);
+  mapboxgl.accessToken =
+    "pk.eyJ1IjoiZmlnYXQiLCJhIjoiY2pvaXY3NTN6MGRpNzN3cXNoaXNpNjEyMSJ9.jiyYnNApApmlEs-jamTIHQ";
 
+  var map = new mapboxgl.Map({
+    container: "map",
+    style: "mapbox://styles/mapbox/light-v9",
+    center:  post.coordinates,
+    zoom: 3
 
+  });
+
+  console.log(map.center);
+
+  var el = document.createElement("div");
+  el.className = "marker";
+
+  // make a marker for each feature and add to the map
+  new mapboxgl.Marker(el)
+    .setLngLat(post.coordinates)
+    .setPopup(
+      new mapboxgl.Popup({ offset: 25 }) // add popups
+        .setHTML("<h3>" + post.title + "</h3><p>" + post.location + "</p>")
+    )
+    .addTo(map);
+</script>
 
 <% include ../partials/footer %>
