--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,86 +16,18 @@ a {
   text-decoration: none;
   color: #000;
 }
-
-/* #### Style nav bar #### */
-
-nav {
-  width: 100%;
-  height: 60px;
-  background: #5470c0;
-  box-shadow: 0px 0px 6px 0px rgba(37, 37, 37, 0.24);
+.featurette-image {
+  border-radius: 5px;
+  box-shadow: 0px 0px 28px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  max-height: 100;
+  transition: 0.75s;
 }
-ul.nav_bar {
-  width: 80%;
-  display: flex;
-  justify-content: center;
-}
-ul.nav_bar li {
-  margin-right: 2em;
-  font-size: 1.2em;
-  text-align: center;
-  color: #4d4774;
-}
-ul.nav_bar li a {
-  color: #fff;
-  padding: 1em;
-  font-weight: 700;
-  font-size: 1.1em;
-  transition: 0.3s;
-}
-ul.nav_bar li a:hover {
-  border-bottom: 0.5px solid #34bfb2;
-}
-ul.nav_bar li.nav_right {
-  margin: auto;
-}
-
-ul.nav_bar li.dropdownIcon {
-  display: none;
-}
-
-/* style list skils */
-.sec-1 .skils {
-  display: flex;
-  justify-content: center;
-  background-color: #000;
-}
-
-.sec-1 .ul-list {
-  display: flex;
-}
-
-.sec-1 .list-skils {
-  display: flex;
-  margin: 0px 20px;
-  color: #fff;
-  font-size: 1.2em;
-}
-/* style list skils end*/
-
-/* ============================== */
-
-/* style list title */
-
-.list-title {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  margin: 1em;
-  line-height: 24px;
-  border-bottom: 1px solid #eee;
-  padding-bottom: 15px;
-  margin-bottom: 15px;
-}
-
-.list-title .link {
-  color: #000;
-  padding: 10px;
-  transition: 0.3s;
-}
-
-.list-title .link:hover {
-  color: rgb(101, 154, 236);
+.col-md-5:hover .featurette-image {
+  transform: scale(1.03);
+  -webkit-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 16px -1px rgba(0, 0, 0, 0.75);
 }
 
 /* style list title end*/
@@ -122,4 +54,27 @@ ul.nav_bar li.dropdownIcon {
 #footer-1 {
   height: 25rem;
   background-color: rgb(90, 115, 145) !important;
+}
+
+#map {
+  width: 40%;
+  height: 60%;
+}
+
+.marker {
+  background-image: url("/img/mapbox-icon.png");
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
 }
