--- a/views/blog/new.ejs
+++ b/views/blog/new.ejs
@@ -1,29 +1,40 @@
-<% include  ../partials/header %>
-
+<% include ../partials/header %>
 
 <div class="container">
   <form action="/blog" method="post" enctype="multipart/form-data">
-
     <div class="form-group">
-      <input type="text" name="title" placeholder="title">
+      <input type="text" name="title" placeholder="title" />
     </div>
 
     <div class="form-group">
-      <input type="text" name="description" placeholder="description">
+      <input type="text" name="description" placeholder="description" />
     </div>
 
     <div class="form-group">
-
-      <input class="form-control" type="file" name="images" multiple="multiple" required>
+      <input
+        class="form-control"
+        type="text"
+        name="location"
+        placeholder="location"
+      />
     </div>
 
     <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-block"> Zatwierdź</button>
+      <input
+        class="form-control"
+        type="file"
+        name="images"
+        multiple="multiple"
+        required
+      />
+    </div>
+
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block">Zatwierdź</button>
     </div>
   </form>
 </div>
 
 <a href="/blog">back...</a>
 
-
-<% include  ../partials/footer %>
+<% include ../partials/footer %>
