--- a/views/layouts/blogPage.ejs
+++ b/views/layouts/blogPage.ejs
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" type="text/css" href="/css/mediaQuery.css">
-  <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
-  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/lib/animate/animate.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
   <title>Document</title>
 </head>
@@ -127,13 +126,7 @@
 
 
       <!-- JavaScript Libraries -->
-      <script src="/lib/jquery/jquery.min.js"></script>
-      <script src="/lib/wow/wow.min.js"></script>
-      <script src="/lib/superfish/hoverIntent.js"></script>
-      <script src="/lib/superfish/superfish.min.js"></script>
-      <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-      <script src="/lib/easing/easing.min.js"></script>
-      <script src="/lib/modal-video/js/modal-video.js"></script>
+
       <script src="/js/main.js"></script>
 </body>
 
