--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,11 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Abel|Dosis|Fjalla+One|Raleway"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <title>Document</title>
   </head>
@@ -54,21 +59,17 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if(!currentUser){ %>
-
           <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
           <li class="nav-item">
             <a class="nav-link" href="/register">Register</a>
           </li>
-
           <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="#">User: <%= currentUser.username %></a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="/logout">Log out</a>
           </li>
-
           <% } %>
         </ul>
       </div>
